syntax = "proto3";

package vector_rpc;

service VectorDB {
  rpc Ping (PingRequest) returns (PingReply) {}
}

message PingRequest {
  string msg = 1;
}

message PingReply {
  string msg = 1;
}

